# subtitle-extractor-ocr

./: .gitignore  LICENSE  README.md  pyproject.toml  result.txt
subtitle_extractor/: cli.py  frame_extractor.py  ocr_engine.py  utils.py  writer.py
tests/: test_ocr_engine.py
